--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
   </build>
   <dependencies>
   
+  
   <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
 <dependency>
     <groupId>com.google.code.gson</groupId>
@@ -29,13 +30,18 @@
     <version>2.8.6</version>
 </dependency>
 <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+
+<dependency>
+ <groupId>org.apache.tomcat</groupId>
+ <artifactId>tomcat-servlet-api</artifactId>
+ <version>7.0.21</version>
+ <scope>provided</scope>
+</dependency>
+
 <dependency>
     <groupId>mysql</groupId>
     <artifactId>mysql-connector-java</artifactId>
     <version>8.0.24</version>
 </dependency>
-  
-  
-  
   </dependencies>
 </project>
