--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,11 @@
   <build>
     <plugins>
       <plugin>
+      	
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
+          
           <source>1.8</source>
           <target>1.8</target>
         </configuration>
@@ -17,6 +19,9 @@
       <plugin>
         <artifactId>maven-war-plugin</artifactId>
         <version>3.2.3</version>
+        <configuration>
+          <warName>FTT-WEB-091</warName>
+        </configuration>
       </plugin>
     </plugins>
   </build>
